[package]
name = "maplib"
version = "0.3.6"
edition = "2021"

[dependencies]
rayon = "1.6.0"
nom={version="7.1.1", features=["alloc"]}
sprs = {version="0.11.0", features=["rayon"]}
spargebra = "0.2.2"
oxrdf = "0.1.0"
polars = {version="0.25.1", features=["semi_anti_join","abs", "round_series", "simd", "lazy", "concat_str", "dtype-categorical", "is_in", "strings", "dtype-struct", "horizontal_concat", "rows", "dtype-datetime", "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet"] }
unic-char-range = "0.9.0"
mimalloc = { version = "*", default-features = false }
log="0.4.14"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
polars-utils = "0.25.1"
polars-core = "0.25.1"
chrono = "0.4"
chrono-tz = "0.6"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}
thiserror="1.0.31"
env_logger = "0.10.0"

[dev-dependencies]
rstest = "0.14.0"
serial_test = "0.8.0"