[package]
name = "py_maplib"
version = "0.4.2"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
maplib = {path="../maplib"}
triplestore = {path="../triplestore"}

oxrdf = "0.1.0"
arrow_python_utils = {path="../arrow_python_utils"}
thiserror="1.0.31"
polars-core = {version="0.30.0"}

[lib]
name = "maplib"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"